@@ -49,7 +49,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
-import java.util.Set;
 import java.util.TreeMap;
 
 import javax.enterprise.context.SessionScoped;
@@ -63,6 +62,7 @@ import javax.servlet.ServletContext;
 import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletResponse;
 
+import org.apache.commons.configuration.ConfigurationException;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVPrinter;
 import org.apache.commons.lang.StringUtils;
@@ -91,6 +91,7 @@ import org.goobi.beans.Template;
 import org.goobi.beans.Templateproperty;
 import org.goobi.beans.User;
 import org.goobi.beans.Usergroup;
+import org.goobi.goobiScript.GoobiScriptManager;
 import org.goobi.goobiScript.GoobiScriptResult;
 import org.goobi.goobiScript.IGoobiScript;
 import org.goobi.production.cli.helper.StringPair;
@@ -113,8 +114,8 @@ import org.goobi.production.properties.PropertyParser;
 import org.goobi.production.properties.Type;
 import org.jdom2.output.Format;
 import org.jdom2.output.XMLOutputter;
+import org.jdom2.transform.XSLTransformException;
 import org.jfree.chart.plot.PlotOrientation;
-import org.reflections.Reflections;
 
 import com.lowagie.text.Document;
 import com.lowagie.text.PageSize;
@@ -250,6 +251,9 @@ public class ProcessBean extends BasicBean implements Serializable {
     @Inject
     private StepBean bean;
 
+    @Inject
+    private GoobiScriptManager goobiScriptManager;
+
     public ProcessBean() {
         this.anzeigeAnpassen = new HashMap<>();
 
@@ -341,7 +345,6 @@ public class ProcessBean extends BasicBean implements Serializable {
          */
         if (this.myProzess != null && this.myProzess.getTitel() != null) {
             if (!this.myProzess.getTitel().equals(this.myNewProcessTitle)) {
-
                 String validateRegEx = ConfigurationHelper.getInstance().getProcessTiteValidationlRegex();
                 if (!this.myNewProcessTitle.matches(validateRegEx)) {
                     this.modusBearbeiten = "prozess";
@@ -417,7 +420,7 @@ public class ProcessBean extends BasicBean implements Serializable {
         importTicket.getProperties().put("rule", "Autodetect rule");
         importTicket.getProperties().put("deleteOldProcess", "true");
         try {
-            TicketGenerator.submitInternalTicket(importTicket, QueueType.FAST_QUEUE);
+            TicketGenerator.submitInternalTicket(importTicket, QueueType.FAST_QUEUE, "DatabaseInformationTicket", 0);
         } catch (JMSException e) {
             logger.error("Error adding TaskTicket to queue", e);
             LogEntry errorEntry = LogEntry.build(this.myProzess.getId())
@@ -781,7 +784,7 @@ public class ProcessBean extends BasicBean implements Serializable {
         }
         //This is needed later when the page is left. (Next page may be different)
         boolean createNewStep = !myProzess.getSchritte().contains(mySchritt);
-        
+
         // Create new step and add it to process
         if (createNewStep) {
             // When parallel tasks aren't allowed, all steps
@@ -1798,20 +1801,13 @@ public class ProcessBean extends BasicBean implements Serializable {
     public List<StringPair> getAllGoobiScripts() {
         if (allGoobiScripts == null) {
             allGoobiScripts = new ArrayList<>();
-
-            Set<Class<? extends IGoobiScript>> myset = new Reflections("org.goobi.goobiScript.*").getSubTypesOf(IGoobiScript.class);
-            for (Class<? extends IGoobiScript> cl : myset) {
-                try {
-                    IGoobiScript gs = cl.newInstance();
-                    if (gs.isVisible()) {
-                        allGoobiScripts.add(new StringPair(gs.getAction(), gs.getSampleCall()));
-                    }
-                } catch (InstantiationException e) {
-                } catch (IllegalAccessException e) {
+            for (IGoobiScript gs : goobiScriptManager.getAvailableGoobiScripts()) {
+                if (gs.isVisible()) {
+                    allGoobiScripts.add(new StringPair(gs.getAction(), gs.getSampleCall()));
                 }
             }
-            Collections.sort(allGoobiScripts, new StringPair.OneComparator());
         }
+        Collections.sort(allGoobiScripts, new StringPair.OneComparator());
         return allGoobiScripts;
     }
 
@@ -1825,8 +1821,8 @@ public class ProcessBean extends BasicBean implements Serializable {
         } else {
             resetHitsCount();
             GoobiScript gs = new GoobiScript();
-            return gs.execute(this.paginator.getIdList(), this.goobiScript);
-
+            gs.execute(this.paginator.getIdList(), this.goobiScript, goobiScriptManager);
+            return "process_all?faces-redirect=true";
         }
     }
 
@@ -1845,7 +1841,8 @@ public class ProcessBean extends BasicBean implements Serializable {
             for (Process p : (List<Process>) paginator.getList()) {
                 idList.add(p.getId());
             }
-            return gs.execute(idList, this.goobiScript);
+            gs.execute(idList, this.goobiScript, goobiScriptManager);
+            return "process_all?faces-redirect=true";
         }
     }
 
@@ -1866,7 +1863,8 @@ public class ProcessBean extends BasicBean implements Serializable {
                 }
             }
             GoobiScript gs = new GoobiScript();
-            return gs.execute(idList, this.goobiScript);
+            gs.execute(idList, this.goobiScript, goobiScriptManager);
+            return "process_all?faces-redirect=true";
         }
     }
 
@@ -2077,13 +2075,64 @@ public class ProcessBean extends BasicBean implements Serializable {
         this.myProzess.downloadSimplifiedMetadataAsPDF();
     }
 
+    /**
+     * starts generation of xml logfile for current process
+     */
+
+    public void CreateXML() {
+        XsltPreparatorDocket xmlExport = new XsltPreparatorDocket();
+        try {
+            String ziel = Helper.getCurrentUser().getHomeDir() + this.myProzess.getTitel() + "_log.xml";
+            xmlExport.startExport(this.myProzess, ziel);
+        } catch (IOException e) {
+            Helper.setFehlerMeldung("could not write logfile to home directory: ", e);
+        } catch (InterruptedException e) {
+            Helper.setFehlerMeldung("could not execute command to write logfile to home directory", e);
+        }
+    }
+
+    /**
+     * transforms xml logfile with given xslt and provides download
+     */
+    public void TransformXml() {
+        FacesContext facesContext = FacesContextHelper.getCurrentFacesContext();
+        if (!facesContext.getResponseComplete()) {
+            String OutputFileName = "export.xml";
+            /*
+             * Vorbereiten der Header-Informationen
+             */
+            HttpServletResponse response = (HttpServletResponse) facesContext.getExternalContext().getResponse();
+
+            ServletContext servletContext = (ServletContext) facesContext.getExternalContext().getContext();
+            String contentType = servletContext.getMimeType(OutputFileName);
+            response.setContentType(contentType);
+            response.setHeader("Content-Disposition", "attachment;filename=\"" + OutputFileName + "\"");
+
+            response.setContentType("text/xml");
+
+            try {
+                ServletOutputStream out = response.getOutputStream();
+                XsltPreparatorDocket export = new XsltPreparatorDocket();
+                export.startTransformation(out, this.myProzess, this.selectedXslt);
+                out.flush();
+            } catch (ConfigurationException e) {
+                Helper.setFehlerMeldung("could not create logfile: ", e);
+            } catch (XSLTransformException e) {
+                Helper.setFehlerMeldung("could not create transformation: ", e);
+            } catch (IOException e) {
+                Helper.setFehlerMeldung("could not create transformation: ", e);
+            }
+            facesContext.responseComplete();
+        }
+    }
+
     public String getMyProcessId() {
         return String.valueOf(this.myProzess.getId());
     }
 
     public void setMyProcessId(String id) {
         try {
-            int myid = new Integer(id);
+            int myid = Integer.valueOf(id).intValue();
             this.myProzess = ProcessManager.getProcessById(myid);
             //        } catch (DAOException e) {
             //            logger.error(e);
@@ -2113,6 +2162,10 @@ public class ProcessBean extends BasicBean implements Serializable {
 
     public String getSelectedXslt() {
         return this.selectedXslt;
+    }
+
+    public String downloadDocket() {
+        return this.myProzess.downloadDocket();
     }
 
     public void setMyCurrentTable(StatisticsRenderingElement myCurrentTable) {
@@ -2753,10 +2806,10 @@ public class ProcessBean extends BasicBean implements Serializable {
             } else {
                 currentPlugin = (IStepPlugin) PluginLoader.getPluginByTitle(PluginType.Step, mySchritt.getStepPlugin());
                 if (currentPlugin != null) {
-                    bean.setMyPlugin(currentPlugin);
                     currentPlugin.initialize(mySchritt, "/process_edit");
                     if (currentPlugin.getPluginGuiType() == PluginGuiType.FULL || currentPlugin.getPluginGuiType() == PluginGuiType.PART_AND_FULL) {
 
+                        bean.setMyPlugin(currentPlugin);
                         String mypath = currentPlugin.getPagePath();
                         currentPlugin.execute();
                         return mypath;
@@ -2769,6 +2822,7 @@ public class ProcessBean extends BasicBean implements Serializable {
                         //                            requestMap.put("AktuelleSchritteForm", bean);
                         //                        }
 
+                        bean.setMyPlugin(currentPlugin);
                         String mypath = "/uii/task_edit_simulator";
                         currentPlugin.execute();
                         return mypath;
